--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </head>
 
     <body>
-        <div style="background-image: url(img/Asset%201.svg); height: 100vh; background-position: bottom; background-size: contain; background-repeat: no-repeat;background-color: #bab7f254;">
+        <div class="banner" style="background-image: url(img/Asset%201.svg); background-position: bottom; background-size: contain; background-repeat: no-repeat;background-color: #bab7f254;">
             <header class="d-noe">
                 <div class="container">
                     <div class="row">
@@ -94,13 +94,13 @@
                 <div class="row" style="align-items: center">
                     <div class="col-lg-6 h-100 my-3">
 
-                        <h1 style="font-size: 3rem; line-height: 1.16; font-weight: 400;">We are dedicated to finding and interviewing successful entrepreneurs in Africa.</h1>
+                        <h1>We are dedicated to finding and interviewing successful entrepreneurs in Africa.</h1>
 
                         <p class="mt-4">We are concerned about interviewing and retelling the tough, but successful stories of business leaders in Africa in such a way that it will inspire and help you grow your business. We are committed to making sure their stories strengthen your entrepreneurial pursuit and that of others around the globe.</p>
 
                     </div>
 
-                    <div class="col-lg-6 h-100 my-3 text-center">
+                    <div class="col-lg-6 h-100 my-3 text-center d-none d-lg-block">
                         <img class="img-fluid" src="img/map.ef51d5e.svg" alt="">
                     </div>
                 </div>
@@ -189,7 +189,7 @@
         <div class="container mt-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 style="font-size: 3rem; line-height: 1.16; font-weight: 400;">Entrepreneurship</h1>
+                    <h1 style="font-size: 2.5rem; line-height: 1.16; font-weight: 400;">Entrepreneurship</h1>
                     <p class="mt-4" style='font-family: "Source Sans Pro",sans-serif; font-weight: 300;font-size: 18px;
                                            color: #303030;
                                            line-height: 1.56; letter-spacing: 0;'>Except you want to keep getting the same result, it is nice to do some things differently in your business. This section will teach you how to</p>
