--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@
 
         <div class="subscription position-relative">
             <div class="container">
-                <div class="row" >
+                <div class="row">
 
 
-                    <div class="col-lg-7 h-100 my-3" style="z-index: 2">
+                    <div class="col-lg-7 my-3 h-100 my-3" style="z-index: 2">
 
                         <h1 style="margin-bottom: 3vw;
                                    font-family: 'Calibre Medium' ,Arial,sans-serif;
@@ -291,7 +291,7 @@
 
                     </div>
 
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 my-3" style="z-index: 2">
                         <form>
                             <div class="form-group">
                                 <input type="text" required class="form-control" id="" placeholder="Full Name">
@@ -307,13 +307,14 @@
                 </div>
             </div>
 
-            <img src="img/subscription.svg" style="position: absolute; width: 500px; left: 0; top: 70px;
-                                                   box-shadow: 0 6px 22px rgba(0,0,0,.4); z-index: 1" />
+
+            <img src="img/subscription.svg" alt="" />
+
         </div>
         <div class="container latest" style="background-image: url(img/5d816b07d26938bccbdbcc62_image-home-mission-circle.svg);
-           background-position: bottom;
-           background-repeat: no-repeat;
-           background-size: cover;">
+                                             background-position: bottom;
+                                             background-repeat: no-repeat;
+                                             background-size: cover;">
             <div class="row py-5" style="align-items: center">
                 <div class="col-lg-5 h-100 my-3">
                     <p class="font-weight-bold small">CASE STUDY</p>
@@ -371,7 +372,7 @@
             <div class="container">
                 <div class="bottom-footer mt-0">
                     <div class="clearfix">
-                        <p class="float-md-left">© 2019 copyright all right reserved</p>
+                        <p class="float-md-left ml-3 ml-lg-0">© 2019 copyright all right reserved</p>
 
                         <ul class="float-md-right">
                             <li><a href="#">Privacy &amp; Policy.</a></li>
