--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="author" content="BusinessIQ Africa" />
-		<title>Issue 28 - BusinessIQ Africa</title>
+		<title>Blog - BusinessIQ Africa</title>
 		<script>
 			/* You can add more configuration options to webfontloader by previously defining the WebFontConfig with your options */
 			if (typeof WebFontConfig === "undefined") {
@@ -49,40 +49,68 @@
 		<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:400,500,600,700|Source+Sans+Pro:300, 400,500,600&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
-		<link rel="stylesheet" href="css/stellarnav.min.css" />
 	</head>
 	<body>
-		<div>
-			<header class="d-noe">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-sm-4 col-7">
-							<div class="logo">
-								<a href="index-2.html" class="link"> <img src="img/logo-v1.png" alt="" class="img-fluid"> </a>
-							</div>
-						</div>
-						<div class="col-lg-9 col-sm-4 col-5">
-							<div class="main-menu stellarnav">
-								<ul>
-									<li class="pr-lg-4"><a href="index.html">Home</a></li>
-									<li class="pr-lg-4"><a href="magazine.html">Magazine</a></li>
-									<li class="pr-lg-4"><a href="case_study.html">Case studies</a></li>
-									<li class="pr-lg-4"><a href="book.html">Books</a></li>
-									<li class="pr-lg-4"><a href="blog.html">Blog</a></li>
-									<li class="pr-lg-4"><a href="#">Philanthropy</a></li>
-									<li class="pr-lg-4"><a href="contact.html">Contact</a></li>
-									<li class="pr-lg-4"><a href="login.html">Login</a></li>
-									<li class="pr-lg-4"><a href="register.html">Register</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
+		<div class="container">
+			<nav class="navbar active_nav navbar-expand-lg navbar-light py-md-0 mob-pad fixed-top">
+				<a class="navbar-brand" href="#"><img src="img/logo-v1.png" alt="Business Logo" width="200" class=""></a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ml-auto landing-page">
+
+						<li class="nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="nav-link px-0" href="index.html">Home</a>
+						</li>
+
+						<li class="nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="nav-link px-0" href="magazine.html">Magazine</a>
+						</li>
+
+						<li class="nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="nav-link px-0" href="case_study.html">Case studies</a>
+						</li>
+
+						<li class="nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="nav-link px-0" href="book.html">Books</a>
+						</li>
+
+						<li class="nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="nav-link px-0 active" href="blog.html">Blog</a>
+						</li>
+
+						<li class="nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="nav-link px-0" href="login.html">Log in</a>
+						</li>
+
+						<li class="nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="nav-link px-0" href="register.html">Subscribe</a>
+						</li>
+
+						<li class="dropdown nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="dropdown-toggle nav-link px-0" href="javascript:void(0)" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+								Hi Daniel
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+								<li class="nav-item">
+									<a class="dropdown-item nav-link text-dark font-13" href="#">Manage Account</a>
+								</li>
+								<li class="nav-item">
+									<a class="dropdown-item nav-link text-dark font-13" href="#">Logout</a>
+								</li>
+
+							</ul>
+						</li>
+
+					</ul>
 				</div>
-			</header>
+			</nav>
 		</div>
 
+
 		<div class="container">
-			<div class="row" style="align-items: center">
+			<div class="row mt-lg-5 mt-3" style="align-items: center">
 				<div class="col-lg-4 h-100 my-3">
 					<p class="font-weight-bold small">LATEST ARTICLE</p>
 					<a href="#">
@@ -274,7 +302,7 @@
 		</div>
 	</body>
 	<script src="js/jquery.min.js"></script>
-	<script src="js/stellarnav.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script src="js/utility.js"></script>
 
 </html>
