--- a/contact.html
+++ b/contact.html
@@ -49,39 +49,69 @@
 		<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:400,500,600,700|Source+Sans+Pro:300, 400,500,600&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
-		<link rel="stylesheet" href="css/stellarnav.min.css" />
 	</head>
 	<body>
-		<div>
-			<header class="d-noe">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-sm-4 col-7">
-							<div class="logo">
-								<a href="index-2.html" class="link"> <img src="img/logo-v1.png" alt="" class="img-fluid"> </a>
-							</div>
-						</div>
-						<div class="col-lg-9 col-sm-4 col-5">
-							<div class="main-menu stellarnav">
-								<ul>
-									<li class="pr-lg-4"><a href="index.html">Home</a></li>
-									<li class="pr-lg-4"><a href="magazine.html">Magazine</a></li>
-									<li class="pr-lg-4"><a href="case_study.html">Case studies</a></li>
-									<li class="pr-lg-4"><a href="book.html">Books</a></li>
-									<li class="pr-lg-4"><a href="blog.html">Blog</a></li>
-									<li class="pr-lg-4"><a href="#">Philanthropy</a></li>
-									<li class="pr-lg-4"><a href="contact.html">Contact</a></li>
-									<li class="pr-lg-4"><a href="login.html">Login</a></li>
-									<li class="pr-lg-4"><a href="register.html">Register</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
+
+		<div class="container">
+			<nav class="navbar active_nav navbar-expand-lg navbar-light py-md-0 mob-pad fixed-top">
+				<a class="navbar-brand" href="#"><img src="img/logo-v1.png" alt="Business Logo" width="200" class=""></a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ml-auto landing-page">
+
+						<li class="nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="nav-link px-0" href="index.html">Home</a>
+						</li>
+
+						<li class="nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="nav-link px-0" href="magazine.html">Magazine</a>
+						</li>
+
+						<li class="nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="nav-link px-0" href="case_study.html">Case studies</a>
+						</li>
+
+						<li class="nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="nav-link px-0" href="book.html">Books</a>
+						</li>
+
+						<li class="nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="nav-link px-0" href="blog.html">Blog</a>
+						</li>
+
+						<li class="nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="nav-link px-0" href="login.html">Log in</a>
+						</li>
+
+						<li class="nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="nav-link px-0" href="register.html">Subscribe</a>
+						</li>
+
+						<li class="dropdown nav-item mx-md-4 my-md-0 postion-relative">
+							<a class="dropdown-toggle nav-link px-0" href="javascript:void(0)" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+								Hi Daniel
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+								<li class="nav-item">
+									<a class="dropdown-item nav-link text-dark font-13" href="#">Manage Account</a>
+								</li>
+								<li class="nav-item">
+									<a class="dropdown-item nav-link text-dark font-13" href="#">Logout</a>
+								</li>
+
+							</ul>
+						</li>
+
+					</ul>
 				</div>
-			</header>
+			</nav>
 		</div>
 
-		<div class="subscription position-relative" style="background-color: #5fbef7;">
+
+
+		<div class="subscription position-relative mt-lg-5" style="background-color: #5fbef7;">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-7 my-3 h-100 my-3" style="z-index: 2">
@@ -92,17 +122,23 @@
 								   letter-spacing: -.3vw;
 								   font-weight: 500;
 								   color: #0D0E0E;">Connect With Us</h1>
-						<h4 class="my-4 font-weight-" style="font-size: 30px;
+						<h4 class="my-4 font-weight-" style="font-size: 20px;
 															 line-height: 30px;
 															 font-weight: 500;">Want to chat? We’d love to hear from you! Get in touch with our Customer Success Team to inquire about speaking events, advertising rates, or just say hello.</h4>
 					</div>
+
 					<div class="col-lg-5 my-3" style="z-index: 2">
 						<form>
 							<div class="form-group">
-								<input type="text" required class="form-control" id="" placeholder="Full Name"> </div>
+								<input type="text" required class="form-control" id="" placeholder="Full Name">
+							</div>
 							<div class="form-group">
-								<input type="email" class="form-control" id="" placeholder="Email Address"> </div>
-							<button type="submit" class="btn px-5 py-3">Subscribe to Newsletter</button>
+								<input type="email" class="form-control" id="" placeholder="Email Address">
+							</div>
+							<div class="form-group">
+								<textarea type="text" class="form-control" id="" placeholder="Message"></textarea>
+							</div>
+							<button type="submit" class="btn px-5 py-3">Send us a message</button>
 						</form>
 					</div>
 				</div>
