--- a/login.html
+++ b/login.html
@@ -82,7 +82,6 @@
 
                                 <div class="fb-login-button" data-width="200" data-size="large" data-button-type="continue_with" data-auto-logout-link="false" data-use-continue-as="true"></div>
 
-
                                 <a class="btn btn-block text-left font-weight-bold px-0 py-0" style="background-color: #4285F4; color: #fff;"><img src="img/btn_google_dark_normal_ios.svg" class="img-fluid" /> Sign in with Google</a>
 
                                 <p class="text-center small my-3">Or use your email</p>
@@ -109,55 +108,19 @@
                                 <button type="submit" class="btn btn--primary btn-block mt-4 mb-4 btn--shadow">Sign In</button>
                             </div>
                         </div>
-
-
                     </form>
                 </div>
-
-
-
             </div>
         </div>
 
         <div class="footer-bg">
             <div class="container">
-                <div class="row pt-5">
-                    <div class="col-lg-4 col-sm-6 col-12 about-widget footer-information" data-aos="fade-up">
+                <div class="row justify-content-center pt-5">
+                    <div class="col-lg-5 col-sm-6 col-12 about-widget footer-information text-center">
                         <a href="index.html" class="logo"><img src="img/logo-v1.png" alt="Business IQ logo" width="220"></a>
                         <p class="small mb-0 mt-4">BusinessIQ is a digital magazine for aspiring and budding entrepreneurs. It is the fastest and largest circulating business magazine in Africa. It focuses on interviewing successful business leaders to inspire and educate entrepreneurs in Africa. Although it is presently read by thousands across the globe, the unchangeable goal is to reach one billion entrepreneurs around the planet.</p>
                         <p class="mb-0">27 James Robertson Street, Surulere, Lagos</p> <a href="mailto: info@businessiqafrica.com" class="email mt-0">info@businessiqafrica.com</a> <a href="tel:+234254157154" class="phone">+234 254 157 154</a> </div>
-                    <!-- /.about-widget -->
-                    <div class="col-lg-3 col-sm-6 col-12 footer-list aos-init aos-animate" data-aos="fade-up">
-                        <h5 class="title">Recent Posts</h5>
-                        <ul class="list-unstyled">
-                            <li><a href="#">Anthony Joshua: Business Secrets</a></li>
-                            <li><a href="#">How to Stay Relevant</a></li>
-                            <li><a href="#">Do You Have a Business Playbook?</a></li>
-                            <li><a href="#">During Festive Period</a></li>
-                        </ul>
-                    </div>
-                    <!-- /.footer-recent-post -->
-                    <div class="col-lg-3 col-lg-2 col-sm-6 col-12 footer-list">
-                        <h5 class="title">Case Studies</h5>
-                        <ul class="list-unstyled">
-                            <li><a href="#">Anthony Joshua: Business Secrets</a></li>
-                            <li><a href="#">How to Stay Relevant</a></li>
-                            <li><a href="#">Do You Have a Business Playbook?</a></li>
-                            <li><a href="#">During Festive Period</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-sm-6 col-12 footer-list aos-init aos-animate" data-aos="fade-up">
-                        <h5 class="title">Site map</h5>
-                        <ul class="list-unstyled">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="magazine.html">Magazine</a></li>
-                            <li><a href="case_study.html">Case Studies</a></li>
-                            <li><a href="book.html">Books</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="#">Philanthropy</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                        </ul>
-                    </div>
+
                     <!-- /.footer-list -->
                 </div>
             </div>
@@ -175,6 +138,8 @@
                 <!-- /.bottom-footer -->
             </div>
         </div>
+
+
     </body>
     <script src="js/jquery.min.js"></script>
     <script src="js/stellarnav.min.js"></script>
