--- a/case_study.html
+++ b/case_study.html
@@ -49,7 +49,6 @@
 		<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:400,500,600,700|Source+Sans+Pro:300, 400,500,600&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
-		<link rel="stylesheet" href="css/stellarnav.min.css" />
 	</head>
 	<body>
 		<div class="container">
@@ -86,7 +85,7 @@
 						</li>
 
 						<li class="nav-item mx-md-4 my-md-0 postion-relative">
-							<a class="nav-link px-0" href="register.html">Subscribe</a>
+							<a class="nav-link px-0" href="subscription.html">Subscribe</a>
 						</li>
 
 						<li class="dropdown nav-item mx-md-4 my-md-0 postion-relative">
@@ -309,7 +308,7 @@
 		</div>
 	</body>
 	<script src="js/jquery.min.js"></script>
-	<script src="js/stellarnav.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script src="js/utility.js"></script>
 
 </html>
