--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
 						</li>
 
 						<li class="nav-item mx-md-4 my-md-0 postion-relative">
-							<a class="nav-link px-0" href="register.html">Subscribe</a>
+							<a class="nav-link px-0" href="subscription.html">Subscribe</a>
 						</li>
 
 						<li class="dropdown nav-item mx-md-4 my-md-0 postion-relative">
@@ -203,7 +203,7 @@
 		</div>
 	</body>
 	<script src="js/jquery.min.js"></script>
-	<script src="js/stellarnav.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script src="js/utility.js"></script>
 
 </html>
