--- a/subscription.html
+++ b/subscription.html
@@ -110,27 +110,65 @@
 		</div>
 
 
-		<div class="container mt-lg-5">
-			<div class="row justify-content-center">
+		<div class="container">
+			<div class="row justify-content-center pt-5 mt-5">
 				<div class="col-lg-6 my-3 text-center">
-					<h5 class="my-lg-5" style="line-height: 1.16; font-weight: 400;"> Our journalists deliver the facts.
+					<h5 class="my-lg-5" style="line-height: 1.16; font-weight: 400;"> Our analysts deliver the facts.
 						International readers subscribe
-						for just $1 a week. </h5>
+						for just ₦500 a month. </h5>
 				</div>
 			</div>
 		</div>
 
+		<hr />
+
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-lg-6">
+				<div class="col-lg-6 my-3">
+
 					<h6 class="font-weight-bold font-13">MONTHLY SUBSCRIPTION</h6>
-					<h5 class="" style="font-weight: 400;">Unlimited articles on any device.</h5>
+					<h5 class="" style="font-weight: 400;">Unlimited access on any device for a month.</h5>
 					<hr />
-					<p>$1.00/week</p>
+					<p>₦500.00/month</p>
+
 				</div>
 
-				<div class="col-lg-4 text-center">
+				<div class="col-lg-4 text-center my-3">
 					<button class="btn btn--primary px-4">Get Monthly Subscription</button>
+					<p class="small mt-2">You can cancel anytime.</p>
+				</div>
+			</div>
+
+
+			<div class="row justify-content-center">
+				<div class="col-lg-6 my-3">
+
+					<h6 class="font-weight-bold font-13">BI-ANNUAL SUBSCRIPTION</h6>
+					<h5 class="" style="font-weight: 400;">Unlimited access on any device for 6 months.</h5>
+					<hr />
+					<p>₦2,700.00 every 6 Months</p>
+
+				</div>
+
+				<div class="col-lg-4 text-center my-3">
+					<button class="btn btn--primary px-4">Get Bi-annual Subscription</button>
+					<p class="small mt-2">You can cancel anytime.</p>
+				</div>
+			</div>
+
+
+			<div class="row justify-content-center">
+				<div class="col-lg-6 my-3">
+
+					<h6 class="font-weight-bold font-13">ANNUAL SUBSCRIPTION</h6>
+					<h5 class="" style="font-weight: 400;">Unlimited access on any device annually.</h5>
+					<hr />
+					<p>₦4,800.00 every 12 Months</p>
+
+				</div>
+
+				<div class="col-lg-4 text-center my-3">
+					<button class="btn btn--primary px-4">Get Annual Subscription</button>
 					<p class="small mt-2">You can cancel anytime.</p>
 				</div>
 			</div>
