--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
 	<body>
 		<div class="container">
 			<nav class="navbar active_nav navbar-expand-lg navbar-light py-md-0 mob-pad fixed-top">
-				<a class="navbar-brand" href="#"><img src="img/logo-v1.png" alt="Business Logo" width="200" class=""></a>
+				<a class="navbar-brand" href="index.html"><img src="img/logo-v1.png" alt="Business Logo" width="200" class=""></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -110,7 +110,7 @@
 
 
 		<div class="container">
-			<div class="row mt-lg-5 mt-3" style="align-items: center">
+			<div class="row mt-5 mt-3" style="align-items: center">
 				<div class="col-lg-4 h-100 my-3">
 					<p class="font-weight-bold small">LATEST ARTICLE</p>
 					<a href="#">
