--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<div class="banner" style="background-image: url(img/Asset%201.svg); background-position: bottom; background-size: contain; background-repeat: no-repeat;background-color: #ba7f254;">
 			<div class="container">
 				<nav class="navbar active_nav navbar-expand-lg navbar-light py-md-0 mob-pad fixed-top">
-					<a class="navbar-brand" href="#"><img src="img/logo-v1.png" alt="Business Logo" width="200" class=""></a>
+					<a class="navbar-brand" href="index.html"><img src="img/logo-v1.png" alt="Business Logo" width="200" class=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
@@ -87,7 +87,7 @@
 							</li>
 
 							<li class="nav-item mx-md-4 my-md-0 postion-relative">
-								<a class="nav-link px-0" href="register.html">Subscribe</a>
+								<a class="nav-link px-0" href="subscription.html">Subscribe</a>
 							</li>
 
 							<li class="dropdown nav-item mx-md-4 my-md-0 postion-relative">
