--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-4 offset-lg-1 col-sm-4 col-7">
                             <div class="logo">
-                                <a href="index-2.html" class="link"> <img src="img/logo-v1.png" alt="" class="img-fluid"> </a>
+                                <a href="index.html" class="link"> <img src="img/logo-v1.png" alt="" class="img-fluid"> </a>
                             </div>
                         </div>
                     </div>
