--- a/subscription.html
+++ b/subscription.html
@@ -54,7 +54,7 @@
 	<body>
 		<div class="container">
 			<nav class="navbar active_nav navbar-expand-lg navbar-light py-md-0 mob-pad fixed-top">
-				<a class="navbar-brand" href="#"><img src="img/logo-v1.png" alt="Business Logo" width="200" class=""></a>
+				<a class="navbar-brand" href="index.html"><img src="img/logo-v1.png" alt="Business Logo" width="200" class=""></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -86,7 +86,7 @@
 						</li>
 
 						<li class="nav-item mx-md-4 my-md-0 postion-relative">
-							<a class="nav-link px-0 active" href="register.html">Subscribe</a>
+							<a class="nav-link px-0 active" href="subscription.html">Subscribe</a>
 						</li>
 
 						<li class="dropdown nav-item mx-md-4 my-md-0 postion-relative">
