--- a/blog.html
+++ b/blog.html
@@ -110,7 +110,7 @@
 
 
 		<div class="container">
-			<div class="row mt-5 mt-3" style="align-items: center">
+			<div class="row mt-5 pt-4" style="align-items: center">
 				<div class="col-lg-4 h-100 my-3">
 					<p class="font-weight-bold small">LATEST ARTICLE</p>
 					<a href="#">
