blog details fix

--- a/index.html
+++ b/index.html
@@ -209,73 +209,73 @@
 			<div class="row my-4">
 				<div class="col-lg-4 my-3">
 					<div class="blog h-100">
-						<a href="#"> <img class="blog__image img-fluid" alt="How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/Packlane_feature-386x165.jpg" height="165" width=""> </a>
+						<a href="blog_detail.html"> <img class="blog__image img-fluid" alt="How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/Packlane_feature-386x165.jpg" height="165" width=""> </a>
 						<div class="blog__text">
 							<div class="card-item-link-container blog-link-container">
-								<div class="blog__category"> <a href="https://unbounce.com/landing-page-examples/">Landing Page Examples</a> </div>
+								<div class="blog__category"> <a href="category.html">Landing Page Examples</a> </div>
 							</div>
-							<h3 class="blog__title mt-3"><a href="https://unbounce.com/landing-page-examples/how-ecommerce-company-packlane-delivers-on-brand-targeted-campaigns-with-custom-landing-pages/" class="blog-image">How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages This section will teach </a></h3>
-							<div class="blog__author mt-3 mb-2">By <a href="https://unbounce.com/author/hayley-mullen/" title="Posts by Hayley Mullen" class="author url fn" rel="author">Hayley Mullen</a> • January 28th, 2020</div>
+							<h3 class="blog__title mt-3"><a href="blog_detail.html" class="blog-image">How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages This section will teach </a></h3>
+							<div class="blog__author mt-3 mb-2">By <a href="author.html" title="Posts by Hayley Mullen" class="author url fn" rel="author">Hayley Mullen</a> • January 28th, 2020</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 my-3">
 					<div class="blog h-100">
-						<a href="#"> <img class="blog__image img-fluid" alt="How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/Pre-Cart-LPs_feature.jpg" height="165" width="400"> </a>
+						<a href="blog_detail.html"> <img class="blog__image img-fluid" alt="How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/Pre-Cart-LPs_feature.jpg" height="165" width="400"> </a>
 						<div class="blog__text">
 							<div class="card-item-link-container blog-link-container">
-								<div class="blog__category"> <a href="https://unbounce.com/landing-page-examples/">Landing Page Examples</a>, <a href="https://unbounce.com/landing-page-examples/">Landing Page Examples</a> </div>
+								<div class="blog__category"> <a href="category.html">Landing Page Examples</a> </div>
 							</div>
-							<h3 class="blog__title mt-3"><a href="https://unbounce.com/landing-page-examples/how-ecommerce-company-packlane-delivers-on-brand-targeted-campaigns-with-custom-landing-pages/" class="blog-image">How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages</a></h3>
-							<div class="blog__author mt-3 mb-2">By <a href="https://unbounce.com/author/hayley-mullen/" title="Posts by Hayley Mullen" class="author url fn" rel="author">Hayley Mullen</a> • January 28th, 2020</div>
+							<h3 class="blog__title mt-3"><a href="blog_detail.html" class="blog-image">How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages</a></h3>
+							<div class="blog__author mt-3 mb-2">By <a href="author.html" title="Posts by Hayley Mullen" class="author url fn" rel="author">Hayley Mullen</a> • January 28th, 2020</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 my-3">
 					<div class="blog h-100">
-						<a href="#"> <img class="blog__image img-fluid" alt="How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/4-Power-Plays-Driving-Google-Traffic_feature2.jpg" height="165" width="400"> </a>
+						<a href="blog_detail.html"> <img class="blog__image img-fluid" alt="How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/4-Power-Plays-Driving-Google-Traffic_feature2.jpg" height="165" width="400"> </a>
 						<div class="blog__text">
 							<div class="card-item-link-container blog-link-container">
-								<div class="blog__category"> <a href="https://unbounce.com/landing-page-examples/">Landing Page Examples</a> </div>
+								<div class="blog__category"> <a href="category.html">Landing Page Examples</a> </div>
 							</div>
-							<h3 class="blog__title mt-3"><a href="https://unbounce.com/landing-page-examples/how-ecommerce-company-packlane-delivers-on-brand-targeted-campaigns-with-custom-landing-pages/" class="blog-image">How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages</a></h3>
-							<div class="blog__author mt-3 mb-2">By <a href="https://unbounce.com/author/hayley-mullen/" title="Posts by Hayley Mullen" class="author url fn" rel="author">Hayley Mullen</a> • January 28th, 2020</div>
+							<h3 class="blog__title mt-3"><a href="blog_detail.html" class="blog-image">How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages</a></h3>
+							<div class="blog__author mt-3 mb-2">By <a href="author.html" title="Posts by Hayley Mullen" class="author url fn" rel="author">Hayley Mullen</a> • January 28th, 2020</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 my-3">
 					<div class="blog h-100">
-						<a href="#"> <img class="blog__image img-fluid" alt="How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/Packlane_feature-386x165.jpg" height="165" width=""> </a>
+						<a href="blog_detail.html"> <img class="blog__image img-fluid" alt="How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/Packlane_feature-386x165.jpg" height="165" width=""> </a>
 						<div class="blog__text">
 							<div class="card-item-link-container blog-link-container">
-								<div class="blog__category"> <a href="https://unbounce.com/landing-page-examples/">Landing Page Examples</a> </div>
+								<div class="blog__category"> <a href="category.html">Landing Page Examples</a> </div>
 							</div>
-							<h3 class="blog__title mt-3"><a href="https://unbounce.com/landing-page-examples/how-ecommerce-company-packlane-delivers-on-brand-targeted-campaigns-with-custom-landing-pages/" class="blog-image">How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages This section will teach </a></h3>
-							<div class="blog__author mt-3 mb-2">By <a href="https://unbounce.com/author/hayley-mullen/" title="Posts by Hayley Mullen" class="author url fn" rel="author">Hayley Mullen</a> • January 28th, 2020</div>
+							<h3 class="blog__title mt-3"><a href="blog_detail.html" class="blog-image">How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages This section will teach </a></h3>
+							<div class="blog__author mt-3 mb-2">By <a href="author.html" title="Posts by Hayley Mullen" class="author url fn" rel="author">Hayley Mullen</a> • January 28th, 2020</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 my-3">
 					<div class="blog h-100">
-						<a href="#"> <img class="blog__image img-fluid" alt="How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/Pre-Cart-LPs_feature.jpg" height="165" width="400"> </a>
+						<a href="blog_detail.html"> <img class="blog__image img-fluid" alt="How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/Pre-Cart-LPs_feature.jpg" height="165" width="400"> </a>
 						<div class="blog__text">
 							<div class="card-item-link-container blog-link-container">
-								<div class="blog__category"> <a href="https://unbounce.com/landing-page-examples/">Landing Page Examples</a>, <a href="https://unbounce.com/landing-page-examples/">Landing Page Examples</a> </div>
+								<div class="blog__category"> <a href="category.html">Landing Page Examples</a>, <a href="category.html">Landing Page Examples</a> </div>
 							</div>
-							<h3 class="blog__title mt-3"><a href="https://unbounce.com/landing-page-examples/how-ecommerce-company-packlane-delivers-on-brand-targeted-campaigns-with-custom-landing-pages/" class="blog-image">How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages</a></h3>
-							<div class="blog__author mt-3 mb-2">By <a href="https://unbounce.com/author/hayley-mullen/" title="Posts by Hayley Mullen" class="author url fn" rel="author">Hayley Mullen</a> • January 28th, 2020</div>
+							<h3 class="blog__title mt-3"><a href="blog_detail.html" class="blog-image">How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages</a></h3>
+							<div class="blog__author mt-3 mb-2">By <a href="author.html" title="Posts by Hayley Mullen" class="author url fn" rel="author">Hayley Mullen</a> • January 28th, 2020</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 my-3">
 					<div class="blog h-100">
-						<a href="#"> <img class="blog__image img-fluid" alt="How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/4-Power-Plays-Driving-Google-Traffic_feature2.jpg" height="165" width="400"> </a>
+						<a href="blog_detail.html"> <img class="blog__image img-fluid" alt="How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/4-Power-Plays-Driving-Google-Traffic_feature2.jpg" height="165" width="400"> </a>
 						<div class="blog__text">
 							<div class="card-item-link-container blog-link-container">
-								<div class="blog__category"> <a href="https://unbounce.com/landing-page-examples/">Landing Page Examples</a> </div>
+								<div class="blog__category"> <a href="category.html">Landing Page Examples</a> </div>
 							</div>
-							<h3 class="blog__title mt-3"><a href="https://unbounce.com/landing-page-examples/how-ecommerce-company-packlane-delivers-on-brand-targeted-campaigns-with-custom-landing-pages/" class="blog-image">How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages</a></h3>
-							<div class="blog__author mt-3 mb-2">By <a href="https://unbounce.com/author/hayley-mullen/" title="Posts by Hayley Mullen" class="author url fn" rel="author">Hayley Mullen</a> • January 28th, 2020</div>
+							<h3 class="blog__title mt-3"><a href="blog_detail.html" class="blog-image">How Ecommerce Company Packlane Delivers On-Brand, Targeted Campaigns with Custom Landing Pages</a></h3>
+							<div class="blog__author mt-3 mb-2">By <a href="author.html" title="Posts by Hayley Mullen" class="author url fn" rel="author">Hayley Mullen</a> • January 28th, 2020</div>
 						</div>
 					</div>
 				</div>
