--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
 
                 <div class="col-lg-6 h-100 my-3">
 
-                    <form class="px-md-5" id="sign_in_wrapper" action="dashboard.html" method="get">
+                    <form class="px-md-5" id="sign_in_wrapper" action="index.html" method="get">
 
                         <div class="form-group row">
                             <div class="col-sm-10 offset-lg-2">
