--- a/register.html
+++ b/register.html
@@ -73,7 +73,7 @@
 
                 <div class="col-lg-6 h-100 my-3">
 
-                    <form class="px-md-5" id="sign_in_wrapper" action="dashboard.html" method="get">
+                    <form class="px-md-5" id="sign_in_wrapper" action="subscription.html" method="get">
 
                         <div class="form-group row">
                             <div class="col-sm-10 offset-lg-2">
@@ -106,7 +106,7 @@
                             <div class="col-sm-10 offset-lg-2 text-left">
                                 <button type="submit" class="btn btn--primary btn-block mt-4 mb-4 btn--shadow">Sign Up</button>
 
-                                <p>Already have an account?<a href="#" class="mt-3 reset-password--color"> Sign in</a></p>
+                                <p>Already have an account?<a href="login.html" class="mt-3 reset-password--color"> Sign in</a></p>
                             </div>
                         </div>
 
