blog link update

--- a/index.html
+++ b/index.html
@@ -178,14 +178,14 @@
 			<div class="row py-5" style="align-items: center">
 				<div class="col-lg-4 h-100 my-3">
 					<p class="font-weight-bold small">LATEST ARTICLE</p>
-					<a href="#">
+					<a href="blog_detail.html">
 						<h1 style="font-size: 3rem; line-height: 1.16; font-weight: 400;">Design Beautiful Landing Pages
 							That Convert More</h1> </a>
 					<p class="mt-4">Jim Walmsley has smashed records at 50 and 100 miles. Now he hopes to make the Olympics in a distance he’s never run: 26.2 miles.</p>
 					<p class="small mb-0">- January 28th, 2020</p>
 				</div>
 				<div class="col-lg-8 h-100 my-3">
-					<a href="#"> <img class="img-fluid" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/landing-page-convert-more-sales_sm.jpg" alt=""> </a>
+					<a href="blog_detail.html"> <img class="img-fluid" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/landing-page-convert-more-sales_sm.jpg" alt=""> </a>
 				</div>
 			</div>
 		</div>
