updates for subscription section

--- a/index.html
+++ b/index.html
@@ -292,19 +292,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-7 my-3 h-100 my-3" style="z-index: 2">
-						<h1 style="margin-bottom: 3vw;
-								   font-family: 'Calibre Medium' ,Arial,sans-serif;
-								   font-size: 9vw;
-								   line-height: 8vw;
-								   letter-spacing: -.3vw;
-								   font-weight: 500;
-								   color: #0D0E0E;">Be The First To Know</h1>
-						<h4 class="my-4 font-weight-" style="font-size: 30px;
-															 line-height: 30px;
-															 font-weight: 500;">Join Our Newsletter</h4> <a href="javascript:void(0)" id="reveal_subscription">Why we collect your info?</a>
-						<p class="mt-2 none subscription_reason" style='font-family: "Source Sans Pro",sans-serif; font-weight: 300;font-size: 18px;
-																		color: #303030;
-																		line-height: 1.56; letter-spacing: 0;'>This form collects your name and email so we can add you to our email list and send you our newsletter and information about Business IQ events and products. Please read our Privacy Policy to understand how we protect and manage your data.</p>
+						<h1>Be The First To Know</h1>
+						<h4 class="my-4 font-weight-" style="">Join Our Newsletter</h4>
+						<a href="javascript:void(0)" id="reveal_subscription">Why we collect your info?</a>
+						<p class="mt-2 none subscription_reason">This form collects your name and email so we can add you to our email list and send you our newsletter and information about Business IQ events and products. Please read our Privacy Policy to understand how we protect and manage your data.</p>
 					</div>
 					<div class="col-lg-5 my-3" style="z-index: 2">
 						<form>
