update subscription page

--- a/subscription.html
+++ b/subscription.html
@@ -124,7 +124,7 @@
 
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-lg-6 my-3">
+				<div class="col-lg-6 my-3 border-left">
 
 					<h6 class="font-weight-bold font-13">MONTHLY SUBSCRIPTION</h6>
 					<h5 class="" style="font-weight: 400;">Unlimited access on any device for a month.</h5>
@@ -133,15 +133,15 @@
 
 				</div>
 
-				<div class="col-lg-4 text-center my-3">
-					<button class="btn btn--primary px-4">Get Monthly Subscription</button>
+				<div class="col-lg-4 text-center my-3 border-left">
+					<a href="register.html" class="btn btn--primary px-4">Get Monthly Subscription</a>
 					<p class="small mt-2">You can cancel anytime.</p>
 				</div>
 			</div>
 
 
 			<div class="row justify-content-center">
-				<div class="col-lg-6 my-3">
+				<div class="col-lg-6 my-3 border-left">
 
 					<h6 class="font-weight-bold font-13">BI-ANNUAL SUBSCRIPTION</h6>
 					<h5 class="" style="font-weight: 400;">Unlimited access on any device for 6 months.</h5>
@@ -150,15 +150,15 @@
 
 				</div>
 
-				<div class="col-lg-4 text-center my-3">
-					<button class="btn btn--primary px-4">Get Bi-annual Subscription</button>
+				<div class="col-lg-4 text-center my-3 border-left">
+					<a href="register.html" class="btn btn--primary px-4">Get Bi-annual Subscription</a>
 					<p class="small mt-2">You can cancel anytime.</p>
 				</div>
 			</div>
 
 
 			<div class="row justify-content-center">
-				<div class="col-lg-6 my-3">
+				<div class="col-lg-6 my-3 border-left">
 
 					<h6 class="font-weight-bold font-13">ANNUAL SUBSCRIPTION</h6>
 					<h5 class="" style="font-weight: 400;">Unlimited access on any device annually.</h5>
@@ -167,8 +167,8 @@
 
 				</div>
 
-				<div class="col-lg-4 text-center my-3">
-					<button class="btn btn--primary px-4">Get Annual Subscription</button>
+				<div class="col-lg-4 text-center my-3 border-left">
+					<a href="register.html" class="btn btn--primary px-4">Get Annual Subscription</a>
 					<p class="small mt-2">You can cancel anytime.</p>
 				</div>
 			</div>
