Some restructuring done

--- a/magazine.html
+++ b/magazine.html
@@ -127,9 +127,6 @@
 
 					<button class="btn btn-success px-5 py-3">Download</button>
 				</div>
-
-
-
 			</div>
 		</div>
 
@@ -137,7 +134,7 @@
 		<div class="container mt-5">
 			<div class="row justify-content-center">
 				<div class="col-lg-10 text-center">
-					<h1 style="font-size: 3rem; line-height: 1.16; font-weight: 400;">Rummage through the archives</h1>
+					<h1 style="font-size: 3rem; line-height: 1.16; font-weight: 400;">Explore the interviews of business leaders</h1>
 					<p class="mt-4" style='font-family: "Source Sans Pro",sans-serif; font-weight: 300;font-size: 18px;
 										   color: #303030;
 										   line-height: 1.56; letter-spacing: 0;'>We are concerned about interviewing and retelling the tough, but successful stories of business leaders in Africa in such a way that it will inspire and help you grow your business. We are committed to making sure their stories strengthen your entrepreneurial pursuit and that of others around the globe.</p>
