--- a/subscription.html
+++ b/subscription.html
@@ -110,12 +110,12 @@
 		</div>
 
 
-		<div class="container">
-			<div class="row justify-content-center pt-5 mt-5">
-				<div class="col-lg-6 my-3 text-center">
-					<h5 class="my-lg-5" style="line-height: 1.16; font-weight: 400;"> Our analysts deliver the facts.
-						International readers subscribe
-						for just ₦500 a month. </h5>
+		<div>
+			<div class="container">
+				<div class="row justify-content-center pt-5 mt-5">
+					<div class="col-lg-6 my-3 text-center">
+						<h5 class="my-lg-5" style="line-height: 1.16; font-weight: 400;">Gain access to wealth of BusinessIQ magazine, case studies, bullet books and self- help business articles for as low as N500 ($1.4) monthly.</h5>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -123,53 +123,55 @@
 		<hr />
 
 		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-lg-6 my-3 border-left">
+			<div class="row justify-content-center align-center">
+				<div class="col-lg-6 my-3 border-left border-right">
 
 					<h6 class="font-weight-bold font-13">MONTHLY SUBSCRIPTION</h6>
 					<h5 class="" style="font-weight: 400;">Unlimited access on any device for a month.</h5>
 					<hr />
-					<p>₦500.00/month</p>
+					<p class="font-weight-600">₦1,000 ($2.8)</p>
 
 				</div>
 
-				<div class="col-lg-4 text-center my-3 border-left">
-					<a href="register.html" class="btn btn--primary px-4">Get Monthly Subscription</a>
-					<p class="small mt-2">You can cancel anytime.</p>
+				<div class="col-lg-4 text-center my-3">
+					<a href="register.html" class="btn btn--primary px-4">Subscribe</a>
+					<p class="small mt-2 mb-lg-0">You can cancel anytime.</p>
 				</div>
 			</div>
 
 
-			<div class="row justify-content-center">
-				<div class="col-lg-6 my-3 border-left">
+			<div class="row justify-content-center align-center">
+				<div class="col-lg-6 my-3 border-left border-right">
 
 					<h6 class="font-weight-bold font-13">BI-ANNUAL SUBSCRIPTION</h6>
 					<h5 class="" style="font-weight: 400;">Unlimited access on any device for 6 months.</h5>
 					<hr />
-					<p>₦2,700.00 every 6 Months</p>
+					<p class="font-weight-bold mb-1">₦4,200 ($11.5) for 6 month</p>
+					<p class="font-weight-bold">At ₦700 ($2)/ month (Save 30%)</p>
 
 				</div>
 
-				<div class="col-lg-4 text-center my-3 border-left">
-					<a href="register.html" class="btn btn--primary px-4">Get Bi-annual Subscription</a>
-					<p class="small mt-2">You can cancel anytime.</p>
+				<div class="col-lg-4 text-center my-3">
+					<a href="register.html" class="btn btn--primary px-4">Subscribe</a>
+					<p class="small mt-2 mb-lg-0">You can cancel anytime.</p>
 				</div>
 			</div>
 
 
-			<div class="row justify-content-center">
-				<div class="col-lg-6 my-3 border-left">
+			<div class="row justify-content-center align-center">
+				<div class="col-lg-6 my-3 border-left border-right">
 
 					<h6 class="font-weight-bold font-13">ANNUAL SUBSCRIPTION</h6>
 					<h5 class="" style="font-weight: 400;">Unlimited access on any device annually.</h5>
 					<hr />
-					<p>₦4,800.00 every 12 Months</p>
+					<p class="font-weight-bold mb-1">₦6,000 ($16.5) for 1 Year</p>
+					<p class="font-weight-bold mb-1">At ₦500 ($1.4)/ month (save 50%)</p>
 
 				</div>
 
-				<div class="col-lg-4 text-center my-3 border-left">
-					<a href="register.html" class="btn btn--primary px-4">Get Annual Subscription</a>
-					<p class="small mt-2">You can cancel anytime.</p>
+				<div class="col-lg-4 text-center my-3">
+					<a href="register.html" class="btn btn--primary px-4">Subscribe</a>
+					<p class="small mt-2 mb-lg-0">You can cancel anytime.</p>
 				</div>
 			</div>
 		</div>
