--- a/blog.html
+++ b/blog.html
@@ -113,14 +113,14 @@
 			<div class="row mt-5 pt-4" style="align-items: center">
 				<div class="col-lg-4 h-100 my-3">
 					<p class="font-weight-bold small">LATEST ARTICLE</p>
-					<a href="#">
+					<a href="blog_detail.html">
 						<h1 style="font-size: 3rem; line-height: 1.16; font-weight: 400;">Design Beautiful Landing Pages
 							That Convert More</h1> </a>
 					<p class="mt-4">Jim Walmsley has smashed records at 50 and 100 miles. Now he hopes to make the Olympics in a distance he’s never run: 26.2 miles.</p>
 					<p class="small mb-0">- January 28th, 2020</p>
 				</div>
 				<div class="col-lg-8 h-100 my-3">
-					<a href="#"> <img class="img-fluid" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/landing-page-convert-more-sales_sm.jpg" alt=""> </a>
+					<a href="blog_detail.html"> <img class="img-fluid" src="https://mk0zofoqaluvgdskgvsb.kinstacdn.com/photos/landing-page-convert-more-sales_sm.jpg" alt=""> </a>
 				</div>
 			</div>
 		</div>
@@ -212,24 +212,17 @@
 
 		</div>
 
+
+		<!--		Newsletter Subscription-->
 		<div class="subscription position-relative">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-7 my-3 h-100 my-3" style="z-index: 2">
-						<h1 style="margin-bottom: 3vw;
-								   font-family: 'Calibre Medium' ,Arial,sans-serif;
-								   font-size: 9vw;
-								   line-height: 8vw;
-								   letter-spacing: -.3vw;
-								   font-weight: 500;
-								   color: #0D0E0E;">Be The First To Know</h1>
-						<h4 class="my-4 font-weight-" style="font-size: 30px;
-															 line-height: 30px;
-															 font-weight: 500;">Join Our Newsletter</h4>
-						<a href="javascript:void(0)" id="reveal_subscription">Why we collect your info?</a>
-						<p class="mt-2 none subscription_reason" style='font-family: "Source Sans Pro",sans-serif; font-weight: 300;font-size: 18px;
-																		color: #303030;
-																		line-height: 1.56; letter-spacing: 0;'>This form collects your name and email so we can add you to our email list and send you our newsletter and information about Business IQ events and products. Please read our Privacy Policy to understand how we protect and manage your data.</p>
+						<h1>Be The First To Know</h1>
+						<h4 class="my-4 font-weight-" style="">Join Our Newsletter</h4>
+						<a href="javascript:void(0)" id="reveal_subscription">Why we collect your info</a>
+						<p class="mt-2 none subscription_reason">We simply include your name and email in our mailing list so we can send you our newsletter and other necessary information about BusinessIQ, its events and products. We do not make
+							your data available to any third party. Read our privacy policy for more information.</p>
 					</div>
 					<div class="col-lg-5 my-3" style="z-index: 2">
 						<form>
@@ -237,20 +230,33 @@
 								<input type="text" required class="form-control" id="" placeholder="Full Name"> </div>
 							<div class="form-group">
 								<input type="email" class="form-control" id="" placeholder="Email Address"> </div>
-							<button type="submit" class="btn px-5 py-3">Subscribe to Newsletter</button>
+							<button type="submit" class="btn px-5 py-3">Subscribe to our Newsletter</button>
 						</form>
 					</div>
 				</div>
-			</div> <img src="img/subscription.svg" alt="" /> </div>
+			</div> <img src="img/subscription.svg" alt="" />
+		</div>
 
+		<!--		Footer information-->
 
 		<div class="footer-bg">
 			<div class="container">
 				<div class="row pt-5">
 					<div class="col-lg-4 col-sm-6 col-12 about-widget footer-information" data-aos="fade-up">
 						<a href="index.html" class="logo"><img src="img/logo-v1.png" alt="Business IQ logo" width="220"></a>
-						<p class="small mb-0 mt-4">BusinessIQ is a digital magazine for aspiring and budding entrepreneurs. It is the fastest and largest circulating business magazine in Africa. It focuses on interviewing successful business leaders to inspire and educate entrepreneurs in Africa. Although it is presently read by thousands across the globe, the unchangeable goal is to reach one billion entrepreneurs around the planet.</p>
-						<p class="mb-0">27 James Robertson Street, Surulere, Lagos</p> <a href="mailto: info@businessiqafrica.com" class="email mt-0">info@businessiqafrica.com</a> <a href="tel:+234254157154" class="phone">+234 254 157 154</a> </div>
+						<p class="small mb-0 mt-4">BusinessIQ is a digital platform for aspiring and budding entrepreneurs like you. It is the fastest and largest growing entrepreneurial platform in Africa, which gives you interviews of
+							successful business leaders, case studies of businesses in Africa, bullet books and business
+							articles to help you sharpen your business acumen.</p>
+						<a href="mailto: info@businessiqafrica.com" class="email mt-0">info@businessiqafrica.com</a>
+						<a href="tel:+2347067596254" class="phone">+234 7067 596 254</a>
+
+						<ul class="list-inline mt-3">
+							<li class="list-inline-item mr-2"><a href="https//twitter.com/"><img src="img/linkedin.svg" alt="Location" class="img-fluid" /></a></li>
+							<li class="list-inline-item mx-2"><a href="https//twitter.com/" target="_blank" title="Twitter profile"><img src="img/twitter.svg" /></a></li>
+							<li class="list-inline-item mx-2"><a href="https://facebook.com/" target="_blank" title="Facebook Profile"><img src="img/facebook.svg" /></a></li>
+							<li class="list-inline-item mx-2"><a href="https://instagram.com/" target="_blank" title="Instagram Profile"><img src="img/instagram.svg" /></a></li>
+						</ul>
+					</div>
 					<!-- /.about-widget -->
 					<div class="col-lg-3 col-sm-6 col-12 footer-list aos-init aos-animate" data-aos="fade-up">
 						<h5 class="title">Recent Posts</h5>
@@ -292,7 +298,7 @@
 						<p class="float-md-left ml-3 ml-lg-0">© 2020 copyright all right reserved</p>
 						<ul class="float-md-right">
 							<li><a href="privacy_policy.html">Privacy &amp; Policy.</a></li>
-							<li><a href="terms.html">Terms.</a></li>
+							<!--							<li><a href="terms.html">Terms.</a></li>-->
 							<li><a href="subscription.html">Subscription.</a></li>
 						</ul>
 					</div>
@@ -300,6 +306,10 @@
 				<!-- /.bottom-footer -->
 			</div>
 		</div>
+
+
+
+
 	</body>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
