--- a/author.html
+++ b/author.html
@@ -191,14 +191,26 @@
             </div>
         </div>
 
+        <!--		Footer information-->
 
         <div class="footer-bg">
             <div class="container">
                 <div class="row pt-5">
                     <div class="col-lg-4 col-sm-6 col-12 about-widget footer-information" data-aos="fade-up">
                         <a href="index.html" class="logo"><img src="img/logo-v1.png" alt="Business IQ logo" width="220"></a>
-                        <p class="small mb-0 mt-4">BusinessIQ is a digital magazine for aspiring and budding entrepreneurs. It is the fastest and largest circulating business magazine in Africa. It focuses on interviewing successful business leaders to inspire and educate entrepreneurs in Africa. Although it is presently read by thousands across the globe, the unchangeable goal is to reach one billion entrepreneurs around the planet.</p>
-                        <p class="mb-0">27 James Robertson Street, Surulere, Lagos</p> <a href="mailto: info@businessiqafrica.com" class="email mt-0">info@businessiqafrica.com</a> <a href="tel:+234254157154" class="phone">+234 254 157 154</a> </div>
+                        <p class="small mb-0 mt-4">BusinessIQ is a digital platform for aspiring and budding entrepreneurs like you. It is the fastest and largest growing entrepreneurial platform in Africa, which gives you interviews of
+                            successful business leaders, case studies of businesses in Africa, bullet books and business
+                            articles to help you sharpen your business acumen.</p>
+                        <a href="mailto: info@businessiqafrica.com" class="email mt-0">info@businessiqafrica.com</a>
+                        <a href="tel:+2347067596254" class="phone">+234 7067 596 254</a>
+
+                        <ul class="list-inline mt-3">
+                            <li class="list-inline-item mr-2"><a href="https//twitter.com/"><img src="img/linkedin.svg" alt="Location" class="img-fluid" /></a></li>
+                            <li class="list-inline-item mx-2"><a href="https//twitter.com/" target="_blank" title="Twitter profile"><img src="img/twitter.svg" /></a></li>
+                            <li class="list-inline-item mx-2"><a href="https://facebook.com/" target="_blank" title="Facebook Profile"><img src="img/facebook.svg" /></a></li>
+                            <li class="list-inline-item mx-2"><a href="https://instagram.com/" target="_blank" title="Instagram Profile"><img src="img/instagram.svg" /></a></li>
+                        </ul>
+                    </div>
                     <!-- /.about-widget -->
                     <div class="col-lg-3 col-sm-6 col-12 footer-list aos-init aos-animate" data-aos="fade-up">
                         <h5 class="title">Recent Posts</h5>
@@ -240,7 +252,7 @@
                         <p class="float-md-left ml-3 ml-lg-0">© 2020 copyright all right reserved</p>
                         <ul class="float-md-right">
                             <li><a href="privacy_policy.html">Privacy &amp; Policy.</a></li>
-                            <li><a href="terms.html">Terms.</a></li>
+                            <!--							<li><a href="terms.html">Terms.</a></li>-->
                             <li><a href="subscription.html">Subscription.</a></li>
                         </ul>
                     </div>
@@ -248,6 +260,8 @@
                 <!-- /.bottom-footer -->
             </div>
         </div>
+
+
     </body>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
