--- a/author.html
+++ b/author.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="BusinessIQ Africa" />
-        <title>	Subscription - BusinessIQ Africa</title>
+        <title>	Author - BusinessIQ Africa</title>
         <script>
             /* You can add more configuration options to webfontloader by previously defining the WebFontConfig with your options */
             if (typeof WebFontConfig === "undefined") {
@@ -126,7 +126,7 @@
 
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-8 my-3">
+                <div class="col-lg-8">
 
                     <div class="row">
                         <div class="col-lg-6 my-3">
@@ -184,9 +184,20 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 text-center my-3">
-                    <a href="register.html" class="btn btn--primary px-4">Get Monthly Subscription</a>
-                    <p class="small mt-2 mb-lg-0">You can cancel anytime.</p>
+                <div class="col-lg-4 my-3">
+                    <h3 class="mb-4">Get the Latest Delivered Straight to Your Inbox</h3>
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email</label>
+                            <input type="email" class="form-control rounded-0" id="email" aria-describedby="emailHelp">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                        </div>
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">I have read and agree to BusinessIQ <a href="privacy_policy.html">Privacy Policy</a>.</label>
+                        </div>
+                        <button type="submit" class="btn btn--primary px-4 mt-4 rounded-0">Subscribe to our Newsletter</button>
+                    </form>
                 </div>
             </div>
         </div>
