--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				WebFontConfig = new Object();
 			}
 			WebFontConfig['google'] = {
-				families: ['Barlow+Semi+Condensed:400,500,600,700']
+				families: ['Barlow+Semi+Condensed:400,500,600,700','Source+Sans+Pro:300, 400,500,600']
 			};
 			(function () {
 				var wf = document.createElement('script');
@@ -46,7 +46,7 @@
 		<meta name="twitter:image" content="https://geekdaniels.github.io/businessiq/img/og_image_businessiq.png" />
 		<script type='application/ld+json'>{"@context":"https://schema.org","@type":"WebSite","@id":"http://www.businessiqafrica.com/#website","url":"http://www.businessiqafrica.com/","name":"Business IQ Africa","potentialAction":{"@type":"SearchAction","target":"http://www.businessiqafrica.com/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
 		<link rel='dns-prefetch' href='//s.w.org' />
-		<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:400,500,600,700|Source+Sans+Pro:300, 400,500,600&display=swap" rel="stylesheet">
+		<!--		<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:400,500,600,700|Source+Sans+Pro:300, 400,500,600&display=swap" rel="stylesheet">-->
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
 	</head>
@@ -90,14 +90,16 @@
 								<a class="nav-link px-0" href="subscription.html">Subscribe</a>
 							</li>
 
-							<li class="dropdown nav-item mx-md-4 my-md-0 postion-relative">
+
+							<li class="dropdown nav-item ml-md-4 mr-md-5 my-md-0 dropleft">
 								<a class="dropdown-toggle nav-link px-0" href="javascript:void(0)" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
 									Hi Daniel
 								</a>
 								<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 									<li class="nav-item">
-										<a class="dropdown-item nav-link text-dark font-13" href="#">Manage Account</a>
+										<a class="dropdown-item nav-link text-dark font-13" href="manage_account.html">Manage Account</a>
 									</li>
+									<div class="dropdown-divider my-0"></div>
 									<li class="nav-item">
 										<a class="dropdown-item nav-link text-dark font-13" href="#">Logout</a>
 									</li>
@@ -112,17 +114,21 @@
 
 			<div class="container">
 				<div class="row mt-lg-5 justify-content-center  mt-4" style="align-items: center">
-					<div class="col-lg-10 h-100 my-3 text-center">
-						<h2 class="mt-5">We are committed to helping entrepreneurs, like you, launch, manage and grow
-							a successful business anywhere in Africa.</h2>
-						<p class="mt-4 font-weight-">We are concerned about interviewing and retelling the tough, but successful stories of business leaders in Africa in such a way that it will inspire and help you grow your business. We are committed to making sure their stories strengthen your entrepreneurial pursuit and that of others around the globe.</p>
+					<div class="col-lg-7 h-100 my-3">
+						<h1 class="mt-5">We are committed to helping entrepreneurs, like you, launch, manage and grow
+							a successful business anywhere in Africa.</h1>
 
-						<a href="subscription.html" class="btn btn--primary px-5 rounded-0">Subscribe</a>
+						<a href="subscription.html" class="btn btn--primary px-5 rounded-0 mt-lg-5 mt-4">Subscribe</a>
 					</div>
 
+					<div class="col-lg-5 h-100 my-3">
+						<img src="img/" alt="" class="img-fluid" />
+					</div>
 				</div>
 			</div>
 		</div>
+
+
 		<div class="container mt-5">
 			<div class="row justify-content-center">
 				<div class="col-lg-10 text-center">
