--- a/author.html
+++ b/author.html
@@ -86,7 +86,7 @@
                         </li>
 
                         <li class="nav-item mx-md-4 my-md-0 postion-relative">
-                            <a class="nav-link px-0 active" href="subscription.html">Subscribe</a>
+                            <a class="nav-link px-0" href="subscription.html">Subscribe</a>
                         </li>
 
                         <li class="dropdown nav-item mx-md-4 my-md-0 postion-relative">
