--- a/subscription.html
+++ b/subscription.html
@@ -110,24 +110,17 @@
 		</div>
 
 
-		<div style='
-					background: url("https://mwcm.nyt.com/dam/jcr:3cd52be7-3c7c-4ef3-8316-dec4d264a39d/header-desk-left--2x.jpg") left 0 bottom 0 no-repeat, url("https://mwcm.nyt.com/dam/jcr:18ef6d92-3307-476b-9bf5-284c7e9cf2b4/header-desk-right--2x.jpg") right 0 bottom 0 no-repeat;
-					background-size: auto, auto;
-					background-size: contain, contain !important;
-					border-bottom: 1px solid #dedede;
-					max-width: 1440px;
-					padding: 0 20px 176px;
-					background-color: #f5f5f5'>
+		<div class="subscribe__hero position-relative">
 			<div class="container">
 				<div class="row justify-content-center pt-5 mt-5">
 					<div class="col-lg-6 my-3 text-center">
-						<h5 class="my-lg-5" style="line-height: 1.16; font-weight: 400;">Gain access to wealth of BusinessIQ magazine, case studies, bullet books and self- help business articles for as low as N500 ($1.4) monthly.</h5>
+						<h5 class="my-lg-5 text-white" style="line-height: 1.16; font-weight: 400;">Gain access to wealth of BusinessIQ magazine, case studies, bullet books and self- help business articles for as low as N500 ($1.4) monthly.</h5>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<hr />
+		<!--		<hr />-->
 
 		<div class="container">
 			<div class="row justify-content-center align-center">
@@ -140,7 +133,7 @@
 
 				</div>
 
-				<div class="col-lg-4 text-center my-3">
+				<div class="col-lg-4 text-lg-center my-3">
 					<a href="register.html" class="btn btn--primary px-4">Subscribe</a>
 					<p class="small mt-2 mb-lg-0">You can cancel anytime.</p>
 				</div>
@@ -158,7 +151,7 @@
 
 				</div>
 
-				<div class="col-lg-4 text-center my-3">
+				<div class="col-lg-4 text-lg-center my-3">
 					<a href="register.html" class="btn btn--primary px-4">Subscribe</a>
 					<p class="small mt-2 mb-lg-0">You can cancel anytime.</p>
 				</div>
@@ -176,7 +169,7 @@
 
 				</div>
 
-				<div class="col-lg-4 text-center my-3">
+				<div class="col-lg-4 text-lg-center my-3">
 					<a href="register.html" class="btn btn--primary px-4">Subscribe</a>
 					<p class="small mt-2 mb-lg-0">You can cancel anytime.</p>
 				</div>
