fixed header title

--- a/forget_password.html
+++ b/forget_password.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="BusinessIQ Africa" />
-        <title>Log in - BusinessIQ Africa</title>
+        <title>Recover password - BusinessIQ Africa</title>
         <script>
             /* You can add more configuration options to webfontloader by previously defining the WebFontConfig with your options */
             if (typeof WebFontConfig === "undefined") {
